# 3D-Boolean-Modeller

./: BooleanModeller.cpp  BooleanModeller.hpp  Bound.cpp  Bound.hpp  CMakeLists.txt  Face.cpp  Face.hpp  Line.cpp  Line.hpp  Object3D.cpp  Object3D.hpp  Point3f.hpp  README.md  Segment.cpp  Segment.hpp  Solid.cpp  Solid.hpp  Vertex.cpp  Vertex.hpp
DebugVisualizer/: Visualizer.html  Visualizer.js
UnBBoolean/: BooleanModeller.cpp  BooleanModeller.hpp  Solid.cpp  Solid.hpp
UnBBoolean/Helpers/: Bound.cpp  Bound.hpp  Colour3f.cpp  Colour3f.hpp  Point3d.cpp  Point3d.hpp  Point3f.cpp  Point3f.hpp  PointData.hpp  Vector3d.cpp  Vector3d.hpp
UnBBoolean/Internal/: Face.cpp  Face.hpp  Line.cpp  Line.hpp  Object3D.cpp  Object3D.hpp  Segment.cpp  Segment.hpp  Vertex.cpp  Vertex.hpp
UnBBoolean/VolumetricB-tree/: BBTree.h  BBTree.hpp  BoundedObject.h  Main.cpp  SolidObject.h
